only one render layer updating when scene is rendered though VSE in a second scene #65614

Closed
opened 2019-06-07 18:29:59 +02:00 by Sterling Roth · 6 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 980M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.82

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-27 19:48, hash: 89207df722
Worked: (optional)

Short description of error
Rendering a scene with an object render layer and a separated drop shadow render layer combined in the compositor works fine within that scene. When I put that scene into the VSE in another scene, only one render layer is updated, causing the shadow to no longer line up with the object

Exact steps for others to reproduce the error

renderlayer bug.blend

Setup an animated scene with two renderlayers composited together.
Then make a new scene and add the first scene into the VSE as a scene strip.
render the VSE scene.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 980M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.82 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-27 19:48, hash: `89207df722` Worked: (optional) **Short description of error** Rendering a scene with an object render layer and a separated drop shadow render layer combined in the compositor works fine within that scene. When I put that scene into the VSE in another scene, only one render layer is updated, causing the shadow to no longer line up with the object **Exact steps for others to reproduce the error** [renderlayer bug.blend](https://archive.blender.org/developer/F7092260/renderlayer_bug.blend) Setup an animated scene with two renderlayers composited together. Then make a new scene and add the first scene into the VSE as a scene strip. render the VSE scene.
Author

Added subscriber: @SterlingRoth

Added subscriber: @SterlingRoth

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-06-14 12:30:57 +02:00

@Sergey I'm guessing that this might be depsgraph related.

@Sergey I'm guessing that this might be depsgraph related.

@ZedDB, thin more like pipeline related (compositor uses images rendered by a pipeline), but i'll have a look.

@ZedDB, thin more like pipeline related (compositor uses images rendered by a pipeline), but i'll have a look.

This issue was referenced by dd89bcc832

This issue was referenced by dd89bcc832a091b245828092eccbcc36f40b7d52

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65614
No description provided.